# ur5_utec

./: .gitignore  README.md
robotiq_description/: CMakeLists.txt  package.xml
ur5_kinematics/: CMakeLists.txt  package.xml
ur5_kinematics/include/ur5_kinematics/: kinematics.hpp
ur5_kinematics/src/: kinematics.cpp
ur5_kinematics/urdf/: ur5.urdf  ur5e.urdf
ur5_pick_place/: CMakeLists.txt  README.md  package.xml
ur5_pick_place/config/: inspection.rviz  joint_state_initial.yaml  pick_place_params.yaml  ur5_robotiq_controllers.yaml
ur5_pick_place/data/: trajectory_20260517_152630_csv  trajectory_20260628_182338_clamped_spline.csv
ur5_pick_place/include/ur5_pick_place/: ik_wrapper.hpp  trajectory_generator.hpp
ur5_pick_place/launch/: pick_place.launch.py  rviz_inspection.launch.py  simulation.launch.py  ur5_gz.launch.py  ur5_robotiq_gz.launch.py
ur5_pick_place/meshes/bidon/: model.config  model.sdf
ur5_pick_place/meshes/bidon/meshes/: Untitled.mtl
ur5_pick_place/meshes/surgery_table/: model.config  model.sdf
ur5_pick_place/meshes/surgery_table/meshes/: surgery_table.dae  surgery_table.stl
ur5_pick_place/meshes/ur5_base/: model.config  model.sdf
ur5_pick_place/meshes/ur5_base/meshes/: ur5_base.dae  ur5_base.stl
ur5_pick_place/scripts/: waypoint_markers_node.py
ur5_pick_place/src/: compare_trajectories.m  compare_trajectories_pf.m  ik_wrapper.cpp  pick_place_node.cpp  plots_trajectory.m  trajectory_generator.cpp
ur5_pick_place/urdf/: ur5_robotiq_2f85.urdf.xacro  ur5e.urdf.xacro
ur5_pick_place/worlds/: lab_base_world.sdf
ur5_trajectory_optimization/: package.xml  setup.cfg  setup.py
ur5_trajectory_optimization/config/: optimization_params.yaml
ur5_trajectory_optimization/plots/comparison/: cinematica_cartesiana.eps  pareto_fronts.eps  posicion_cartesiana.eps  torques_articulares.eps  trayectoria_3D.eps  velocidades_articulares.eps
ur5_trajectory_optimization/plots/comparison/test1/: cinematica_cartesiana.eps  posicion_cartesiana.eps
ur5_trajectory_optimization/results/: pareto_epsilon.csv  pareto_nsga2.csv  selected_solution.yaml
ur5_trajectory_optimization/results/final/: baseline_vs_optimized.csv  dynamics_validation.csv  integration_comparison.csv  kkt_certificate.txt  selected_solution_final.yaml  singleobjective_comparison.csv
ur5_trajectory_optimization/results/final/plots/traj_comparison/: cinematica_cartesiana.eps  posicion_cartesiana.eps  torques_articulares.eps  trayectoria_3D.eps  velocidades_articulares.eps
ur5_trajectory_optimization/results/test1/: pareto_epsilon.csv
ur5_trajectory_optimization/results/test1/plots/traj_comparison/: pareto_fronts.eps
ur5_trajectory_optimization/results/test2/: baseline_vs_optimized.csv  convergence_nsga2.csv  method_comparison.csv  pareto_nsga2.csv  selected_solution.yaml
ur5_trajectory_optimization/results/test2/plots/traj_comparison/: cinematica_cartesiana.eps  pareto_fronts.eps  posicion_cartesiana.eps  torques_articulares.eps  trayectoria_3D.eps  velocidades_articulares.eps
ur5_trajectory_optimization/scripts/: compare_integration.py  compare_optimization.m  kkt_certification.py  plot_pareto.py  validate_dynamics.py
ur5_trajectory_optimization/ur5_trajectory_optimization/: constraints.py  eval_baseline_cu2.py  export_selected_trajectory.py  forward_dynamics_validation.py  ik_interface.py  integrands.py  metrics.py  multiobjective_optimizer.py  numerical_integration.py  objective_evaluators.py  run_optimization.py  run_singleobjective.py  singleobjective_optimizer.py  trajectory_model.py
