<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ur5_trajectory_optimization</name>
  <version>0.1.0</version>
  <description>
    Multi-objective trajectory optimization for the UR5 pick-and-place task (CU3).
    Offline Python package: optimizes the via-point position using NSGA-II and
    ε-constraint methods with Pinocchio RNEA as the dynamics evaluator.
  </description>
  <maintainer email="smorales@utec.edu.pe">Sergio Morales</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-scipy</exec_depend>
  <exec_depend>python3-matplotlib</exec_depend>
  <exec_depend>python3-yaml</exec_depend>
  <exec_depend>ur5_kinematics</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
